www/style.css
body {
    padding-top: 80px;
    padding-bottom: 0px;
}

p {
    text-align: justify;
}

.thumbnail .caption p {
    text-align: center;
}

blockquote p {
    font-size: 14px;
}


/* Customize the navbar links to be fill the entire space of the .navbar */

.navbar .brand {
  float: right;
  font-weight: bold;
}

.navbar .btn-navbar {
    float: left;
    color: inherit;
}

.sidebar-nav-fixed {
    position:fixed;
}

.sidebar-nav a {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

@media (max-width: 767px) {
    .sidebar-nav-fixed {
        width:auto;
    }
}

@media (max-width: 979px) {
    .sidebar-nav-fixed {
        position:static;
        width: auto;
    }
}

code {
    background-color: #ffffff;
    color: #000000;
    border: none;
    font-size: 100%;
    font-family: courier;
}



h1 {
  text-align: center;
}

h3 {
  padding-top: 50px;
  margin: -50px 0 0;
}

video {
  max-width: 100%;
}

 /* Custom container */
 .container {
     margin: 0 auto;
    max-width: 1000px;
}
.container > hr {
    margin: 60px 0;
}


/* Main marketing message and sign up button */
.jumbotron {
    margin: 80px 0;
    text-align: center;
}


.jumbotron h1 {
    font-size: 70pt;
    line-height: 1;
}

@media (max-width: 767px) {
    .jumbotron h1 {
        max-width:40pt;
    }
}


@media (max-width: 979px) {
    .jumbotron h1 {
        font-size: 45pt;
    }
}

.jumbotron p {
    text-align: center;
}

/*
.jumbotron .lead {
    font-size: 24px;
    line-height: 1.25;
}
.jumbotron .btn {
    font-size: 21px;
    padding: 14px 24px;
}
*/

